<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Save</string>
    <string name="app_subtext">Archive Your Media\n<a href="#">learn more</a></string>
    <string name="title_activity_main">Capture Media</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_first_start">First Start</string>
    <string name="title_activity_view_media">Add Info</string>
    <string name="title_activity_batch_view_media">Batch Edit</string>
    <string name="title_activity_archive_metadata">Metadata</string>
    <string name="title_media_list">Uploads</string>
    <string name="menu_item_publish">Publish</string>
    <string name="menu_item_nearby">Share Nearby</string>
    <string name="lblEditMetadata">Edit Media</string>
    <string name="lblSave">Save</string>
    <string name="loading_title">Uploading Media</string>
    <string name="loading_message">Please wait while your media uploads…</string>
    <string name="default_title">My Title</string>
    <string name="default_tags">OpenArchive</string>
    <string name="alert_lbl_logout">Log out?</string>
    <string name="alert_logout">Logging out will remove all your settings, but still keep your uploads.</string>
    <string name="alert_media_deleted">Media removed</string>
    <string name="alert_delete_media">Remove media from the app?</string>
    <string name="alert_lbl_delete_media">Delete Media</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_uploads">Uploads</string>
    <string name="drawer_logout">Log out</string>
    <string name="drawer_about">About</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_accounts">Spaces</string>
    <string name="action_new_project">New Project</string>
    <string name="internet_archive">Internet Archive</string>
    <string name="sign_up_btn">Don\'t have an account?\n<a href="https://archive.org/account/login.createaccount.php">Register for free.</a></string>
    <string name="import_btn">Import</string>
    <string name="capture_btn">Capture</string>
    <string name="capture_photo">Photo</string>
    <string name="capture_video">Video</string>
    <string name="capture_audio">Audio</string>
    <string name="iv_content_desc">Main Image</string>
    <string name="error_file_not_found">Could not find this file</string>
    <string name="error_invalid_media_type">Unrecognized filetype</string>
    <string name="error_no_media">Could not find any media</string>
    <string name="lbl_Yes">Yes</string>
    <string name="lbl_Cancel">Cancel</string>
    <string name="lbl_off">Off</string>
    <string name="lbl_on">On</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_cancelled">Canceled</string>
    <string name="lbl_success">Done</string>
    <string name="lbl_continue">Continue</string>
    <string name="archive_title">E-mail Confirmation</string>
    <string name="archive_message">Please confirm your e-mail address and return to connect your Internet Archive account.</string>
    <string name="archive_license_by" translatable="false"><a href="https://creativecommons.org/licenses/by/4.0/">Attribution</a></string>
    <string name="archive_license_bysa" translatable="false"><a href="https://creativecommons.org/licenses/by-sa/4.0/">Attribution-ShareAlike</a></string>
    <string name="archive_license_byncnd" translatable="false"><a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">Attribution-NonCommercial-NoDerivs</a></string>
    <string name="upload_to_internet_archive">Upload to Internet Archive</string>
    <string name="upload_securely_via_tor">Upload via Tor</string>
    <string name="lbl_share_prefs">Sharing Preferences</string>
    <string name="problem_authticating">Could not log in at the Internet Archive.</string>
    <string name="uploading_to_internet_archive">Uploading to the Internet Archive…</string>
    <string name="lbl_update_value">Update Value</string>
    <string name="lbl_enter_value">Tap to enter a value.</string>
    <string name="upload_success">Your media is now SAVED!</string>
    <string name="share_using">Share archive link via</string>
    <string name="share_text">shared via OpenArchive at</string>
    <string name="share_torrent_text">available through BitTorrent and OpenArchive:</string>
    <string name="share_media_text">published via OpenArchive at</string>
    <string name="info_license_deriv">Allow anyone to remix and share?</string>
    <string name="info_license_sharealike">Require them to share like you have?</string>
    <string name="info_license_comm">Allow commercial use?</string>
    <string name="orbot_detected">Orbot detected; using Tor network to connect more securely…</string>
    <string name="media_hint">Click \'+\' to pick or create media to add to your archive</string>
    <string name="menu_import_media">Import Media</string>
    <string name="menu_take_photo">Take Photo</string>
    <string name="menu_take_video">Take Video</string>
    <string name="menu_record_audio">Record Audio</string>
    <string name="menu_nearby_rec">Nearby Reception</string>
    <string name="menu_delete">Remove Media</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Add Notes</string>
    <string name="hint_author">Author</string>
    <string name="hint_location">Add Location</string>
    <string name="hint_tags">Add People</string>
    <string name="hint_flag">Tap to flag as significant content</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="nearby_public">Public</string>
    <string name="nearby_private">Private</string>
    <string name="nearby_paired_only">Paired devices only?</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_open">Open</string>
    <string name="channel_name">OpenArchive Uploads</string>
    <string name="channel_description">Shows status and progress of uploads to remote servers</string>
    <string name="status_waiting">Waiting</string>
    <string name="status_error">Error</string>
    <string name="status_public">Public</string>
    <string name="status_uploading">Uploading</string>
    <string name="header_uploading">UPLOADING</string>
    <string name="your_media_is_available">Your media is available at</string>
    <string name="prefs_networking_title">Networking</string>
    <string name="prefs_use_tor_title">Turn on Onion Routing</string>
    <string name="prefs_use_tor_summary">Transfer via the Tor Network only</string>
    <string name="prefs_install_tor_summary">Please install Orbot to enable</string>
    <string name="prefs_prohibit_screenshots_title">Block screenshots</string>
    <string name="prefs_prohibit_screenshots_summary">Prevent screenshots and screen-recordings of this app.</string>
    <string name="prefs_upload_wifi_only_title">Upload Only on Wi-Fi</string>
    <string name="prefs_upload_wifi_only_summary">Wait for Wi-Fi to upload media</string>
    <string name="prefs_nearby_title">Nearby</string>
    <string name="prefs_user_interface_title">Presentation</string>
    <string name="prefs_theme_title">Style</string>
    <string name="prefs_theme_summary">Change how Safe looks.</string>
    <string name="prefs_theme_system">System Controlled</string>
    <string name="prefs_theme_light">Light</string>
    <string name="prefs_theme_dark">Dark</string>
    <string name="prefs_theme_val_system" translatable="false">system</string>
    <string name="prefs_theme_val_light" translatable="false">light</string>
    <string name="prefs_theme_val_dark" translatable="false">dark</string>
    <string name="prefs_data_title">Metadata</string>
    <string name="prefs_use_proofmode_title">Enable ProofMode</string>
    <string name="prefs_use_proofmode_summary">Capture extra metadata and notarize all media.</string>
    <string name="prefs_share_proofmode_title">ProofMode Identity</string>
    <string name="prefs_share_proofmode_summary">Share ProofMode Public Key</string>
    <string name="prefs_bt_title">Bluetooth</string>
    <string name="prefs_bt_summary">Use Bluetooth for nearby sharing</string>
    <string name="prefs_wifi_title">Wi-Fi Peer-to-Peer</string>
    <string name="prefs_wifi_summary">Use Wi-Fi Peer-to-Peer for nearby sharing</string>
    <string name="prefs_lan_title">Wi-Fi Hotspot</string>
    <string name="prefs_lan_summary">Make Wi-Fi hotspot for nearby sharing</string>
    <string name="menu_share">Share</string>
    <string name="bt_not_supported">Bluetooth unsupported</string>
    <string name="bt_not_enabled">Bluetooth off</string>
    <string name="bt_enabled">Bluetooth on</string>
    <string name="action_received">Received</string>
    <string name="status_receiving">Receiving…</string>
    <string name="action_duplicate">Duplicate received</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_connected">Connected!</string>
    <string name="looking_for_nearby_devices">Looking for nearby devices…</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This e-mail address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_username_or_password">Incorrect username or password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contact permission needed for e-mail
        completions."
    </string>
    <string name="importing_media">Importing media…</string>
    <string name="setup_nearby">Nearby</string>
    <string name="action_upload">Upload</string>
    <string name="connect_your_space">To get started, connect to a space to store your media.</string>
    <string name="set_up_where_you_want_your_media_to_be_stored">In settings, you can add another storage space and connect to multiple servers</string>
    <string name="send_directly_to_a_private_server">Send to a webdav server</string>
    <string name="upload_to_the_internet_archive">Upload to the IA</string>
    <string name="action_next">Next</string>
    <string name="remove_from_app">Remove from App</string>
    <string name="access_key">Access Key</string>
    <string name="secret_key">Secret Key</string>
    <string name="info_archiveorg_keys"><b><i>Save</i></b> needs your Internet Archive account\'s API keys to be able to upload media.</string>
    <string name="action_acquire_keys">Acquire Keys</string>
    <string name="dropbox">Dropbox</string>
    <string name="metadata">Metadata</string>
    <string name="upload_to_dropbox">Upload to Dropbox</string>
    <string name="back">Back</string>
    <string name="if_you_do_not_have_existing_keys_learn_how_to_acquire_keys">If you do not have existing keys, <b>learn how</b> to acquire keys.</string>
    <string name="connectivity_data"><![CDATA[Connectivity & Data]]></string>
    <string name="only_upload_media_when_you_are_connected_to_wi_fi">Only upload media when you are connected to Wi-Fi</string>
    <string name="security">Security</string>
    <string name="proofmode">ProofMode</string>
    <string name="learn_more_about_creative_commons">Learn more about Creative Commons.</string>
</resources>