<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:asp="http://schemas.android.com/apk/res-auto">


    <androidx.preference.PreferenceCategory
        android:title="@string/prefs_data_title">

        <androidx.preference.SwitchPreferenceCompat
            android:key="use_proofmode"
            android:title="@string/prefs_use_proofmode_title"
            android:summary="@string/prefs_use_proofmode_summary"
            android:defaultValue="false" />

        <androidx.preference.Preference
            android:key="share_proofmode"
            android:title="@string/prefs_share_proofmode_title"
            android:summary="@string/prefs_share_proofmode_summary"
            />

    </androidx.preference.PreferenceCategory>




</androidx.preference.PreferenceScreen>