<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

s
    <item android:id="@+id/menu_upload" android:title="@string/action_upload"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="false"

        />

    <item
        android:id="@+id/menu_item_share"
        app:showAsAction="always"
        android:title="@string/menu_share"
        android:visible="false"
        android:icon="@drawable/ic_share_white_36dp"
        >
        <menu>
            <item android:id="@+id/menu_item_share_link"
                android:title="Share Link" />
            <item android:id="@+id/menu_item_share_media"
                android:title="Share Media" />
        </menu>

    </item>

    <!--

    <item android:id="@+id/menu_item_nearby" android:title="@string/menu_item_nearby"
        android:orderInCategory="100"
        app:showAsAction="always|collapseActionView"
        android:visible="true"
        android:icon="@drawable/ic_nearby_white_24dp"
        />
-->

    <item android:id="@+id/menu_delete" android:title="@string/menu_delete"/>

</menu>
